# thss-2025-compiler-final

./: .gitignore  CMakeLists.txt  DESIGN.md  Makefile  SysYLexer.g4  SysYParser.g4
include/: IR.h  IRBuilder.h  SymbolTable.h  Type.h
src/: CodeGenVisitor.cpp  CodeGenVisitor.h  IRBuilder.cpp  SymbolTable.cpp  ir.cpp  main.cpp
src/antlr/: SysYLexer.cpp  SysYLexer.h  SysYLexer.interp  SysYParser.cpp  SysYParser.h  SysYParser.interp  SysYParser.tokens  SysYParserBaseListener.cpp  SysYParserBaseListener.h  SysYParserListener.cpp  SysYParserListener.h
test/: unit_tests.cpp
